Feature/KLINK-3/Create delete endpoint for klink (#16)
* [KLINK-3] Create delete endpoint for klink

* KLINK-3: resolve regression for key checking during `getKlink`. Formatting. Add required tag to write key for klink delete operation.

---------
