# klink-rest/src/main/resources/api.yaml
@@ -73,6 +73,16 @@ paths:
             type: string
             format: uuid
           required: true
+        - in: query
+          name: readKey
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: writeKey
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           description: 'Collection deleted'
